<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoodsAdd">

    <TextView
        android:id="@+id/addGoodsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addGoods"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGoodsTV"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/categoryET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryET"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/priceET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionET"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:onClick="onCheckBoxClicked"
        android:text="@string/available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceET" />

    <EditText
        android:id="@+id/numberET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/deliveryDateET"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:hint="@string/deliveryDate"
        android:inputType="date"
        android:onClick="onClickListener"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberET"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <Button
        android:id="@+id/addBTN"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:onClick="onAddButtonClicked"
        android:text="@string/add"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryDateET"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/delBTN"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:onClick="onDeleteButtonClick"
        android:text="@string/del"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBTN"
        app:layout_constraintTop_toBottomOf="@+id/deliveryDateET"
        app:layout_constraintVertical_bias="0.100000024"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>