<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/loadBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLoadButtonClick"
                android:text="@string/load"
                app:backgroundTint="#00BCD4" />

            <Button
                android:id="@+id/saveBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSaveButtonClick"
                android:text="@string/save"
                app:backgroundTint="#00BCD4"
                app:iconTint="#FFFFFF" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/searchET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="auto"
                    android:hint="@string/category"
                    android:inputType="text"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/searchBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSearchButtonClick"
                    android:text="@string/search"
                    android:textSize="12sp"
                    app:backgroundTint="#00BCD4" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="40dp"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/availableCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCheckBoxClicked"
                android:text="@string/available" />

            <CheckBox
                android:id="@+id/notAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCheckBoxClicked"
                android:text="@string/notAvailable" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/add"
            android:layout_margin="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="180dp"
            android:padding="10dip" >

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" >
            </ListView>


        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>